# AWS-SageMaker

./: .gitignore  06_data_science_bible.md  README.md  pyproject.toml
config/: pipeline_params.json
example-project/: README.md  STEP_BY_STEP_GUIDE.md
example-project/part1-notebook/: churn_experiment.ipynb
example-project/part2-mlops/: pyproject.toml  requirements.txt  run_pipeline.py
example-project/part2-mlops/config/: config.py  params.json
example-project/part2-mlops/pipeline/: pipeline.py
example-project/part2-mlops/scripts/: evaluate.py  preprocess.py
example-project/part2-mlops/src/: __init__.py  data_ingestion.py  deployment.py  evaluation.py  monitoring.py  preprocessing.py  registry.py  training.py
example-project/part2-mlops/tests/: test_preprocessing.py
notebooks/: 01_experimentation.ipynb
notebooks/learning/: 02_sagemaker_production_guide.md  03_aws_services_for_ml.md  04_ds_tools_and_orchestration.md  05_cicd_and_github_guide.md  07_retraining_and_production_architectures.md  08_sagemaker_algorithms_and_model_docs.md  09_algorithms_visual_guide.md
notebooks/learning/diagrams/: architecture_1_scheduled_batch.mmd  architecture_2_event_driven.mmd  architecture_3_feature_store.mmd  retraining_flow.mmd
pipelines/: config.py  pipeline.py
scripts/: evaluate.py  preprocess.py  train.py
src/: inference.py
tests/: test_preprocess.py
