[project]
name = "sagemaker-mlops-project"
version = "0.1.0"
description = "End-to-end ML project using AWS SageMaker"
requires-python = ">=3.9"
dependencies = [
    # AWS SDK and SageMaker
    "boto3>=1.28.0",
    "sagemaker>=2.200.0",

    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",

    # Visualization (for notebook)
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",

    # Notebook support
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",

    # MLOps utilities
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
